# advent-of-rust-2020

./: Cargo.toml  README.md  scaffold_day.rb
.github/workflows/: rust.yml
