[package]
name = "advent-of-rust-2020"
version = "0.1.0"
authors = ["LesnyRumcajs <LesnyRumcajs@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
codegen-units = 1
lto = true

[dependencies]
itertools = "0.9"
regex = "1.4"
lazy_static = "1.4"

[[bin]]
name = "day1"
path = "src/bin/day1.rs"

[[bin]]
name = "day2"
path = "src/bin/day2.rs"
